# pschema-rs

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  run.sh
.github/workflows/: ci.yml
examples/: benchmark.rs  wikidata_dump.rs
examples/bh23/: README.md  main.rs  run.sh
examples/cardinality/: main.rs  run.sh
examples/from_duckb/: main.rs
examples/from_duckdb/: example.duckdb  main.rs
examples/from_ntriples/: main.rs
examples/from_uniprot/: README.md  main.rs  run.sh
examples/paper/: main.rs  paper.shexc
examples/zarr/: README.md  main.rs  run.sh  zarr.shexc
src/: dtype.rs  duckdb_dump.rs  id.rs  lib.rs  main.rs  pschema.rs  rules.rs  shape.rs  sp_tree.rs
src/backends/: duckdb.rs  mod.rs  ntriples.rs  parquet.rs
src/shape/: mod.rs  shape_tree.rs  shex.rs
src/utils/: check.rs  examples.rs  mod.rs  symbol_table.rs
