[package]
name = "pschema-rs"
version = "0.0.1"
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
description = "Pregel-based schema validation algorithm written in Rust for generating Wikidata subsets"
documentation = "https://docs.rs/crate/pschema-rs/latest"
repository = "https://github.com/angelip2303/pschema-rs"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"
keywords = ["pregel", "wikidata", "subsetting", "duckdb", "validation"]
categories = ["algorithms", "database", "mathematics", "science"]

[dependencies]
pregel-rs = { path = "../pregel-rs" }
polars = { version = "0.29.0", features = ["lazy", "is_in", "dtype-u8", "performant", "chunked_ids"] }
duckdb = { version="0.7.1" }
rayon = "1.7.0"
wikidata = "0.3.0"
strum = "0.24.1"
strum_macros = "0.24"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[dev-dependencies]
duckdb = { version="0.7.1", features=["bundled"] }

[package.metadata.docs.rs]
features = []
all-features = false
no-default-features = true
default-target = "x86_64-unknown-linux-gnu"

[profile.release]
codegen-units = 1
opt-level = 3
lto = "thin"