[package]
name = "pschema-rs"
version = "0.0.3"
authors = [ "Ángel Iglesias Préstamo <angel.iglesias.prestamo@gmail.com>" ]
description = "Pregel-based schema validation algorithm written in Rust for generating Wikidata subsets"
documentation = "https://docs.rs/crate/pschema-rs/latest"
repository = "https://github.com/angelip2303/pschema-rs"
readme = "README.md"
license = "GPL-3.0-or-later"
edition = "2021"
keywords = ["pregel", "wikidata", "subsetting", "duckdb", "validation"]
categories = ["algorithms", "database", "mathematics", "science"]

[dependencies]
pregel-rs = { version = "0.0.13" }
wikidata-rs = { version = "0.0.4" }
polars = { version = "0.30.0", features = ["lazy", "is_in", "performant", "parquet", "chunked_ids", "list_eval", "dtype-categorical", "rows", "is_first"] }
duckdb = { version = "0.7.1" }
rayon = "1.7.0"
wikidata = "0.3.0"
strum = "0.24.1"
strum_macros = "0.24"
bimap = "0.6.3"
rio_turtle = "0.8.4"
rio_api = "0.8.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.0"

[target.'cfg(target_env = "msvc")'.dependencies]
mimalloc = { version = "0.1.37", default-features = false }

[dev-dependencies]
duckdb = { version="0.7.1", features=["bundled"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "thin"